# ProyectoGPU

./: CMakeLists.txt  README.md
glcore-master/: CMakeLists.txt  imgui.ini
glcore-master/src/: CMakeLists.txt  app.cpp  shader.cpp
src/: CMakeLists.txt  ballExample.cpp  fluid_sim.cu  main.cu
src/collision/: main.cpp
src/shaders/: fragment.glsl  vertex.glsl
